Change bottle on slide 14

--- a/slides/slide--14.html
+++ b/slides/slide--14.html
@@ -33,7 +33,9 @@
       <img src="./images/sl12-newborn.webp">
       <p>ДЛЯ ДІТЕЙ <br> З 5-ти МІСЯЦІВ, <br> ТА ДОРОСЛИХ</p>
     </div>
-    <div class="slide--14__right"></div>
+    <div class="slide--14__right">
+      <img src="./images/sl14-bottle.webp" class="bottle">
+    </div>
   </div>
   <p class="slide-numbering left">14/16</p>
 </article>
